--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>本网站正在更新，现已不可访问！</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="title_icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="title_icon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="main">
         <h1 class="font2">Close</h1>
-        <h1 class="font">--本网站正在更新，现已不可访问 ！</h1>
+        <h1 class="font">本网站正在更新，现已不可访问 ！</h1>
     </div>
 </body>
 </html>
