--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="main">
         <h1 class="font">VIP视频解析</h1>
         <button class="help_updatelog" onclick="help_updatelogs()">更新日志 - 使用说明</button>
-        <form action="https://www.sxxizhang.com/search/index.html?keyword=" class="line01">
+        <form action="" class="line01">
             <input type="text" name="keyword" placeholder="搜索线路 - 01 请输入名称" class="line01_input">
-            <input type="submit" value="搜索 状态：正常" class="line01_button">
+            <input type="submit" value="搜索 状态：异常 不可使用" class="line01_button">
         </form>
         <form action="https://www.yemu.xyz/?url=" class="line02">
             <input type="text" name="url" placeholder="解析线路 - 02 请输入网址" class="line02_input">
