--- a/index.html
+++ b/index.html
@@ -5,20 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <script src="./js/main.js"></script>
-    <title>VIP视频解析</title>
+    <title>VIP视频解析 - 暂停服务 不可使用</title>
 </head>
 <body>
     <div class="main">
-        <h1 class="font">VIP视频解析</h1>
-        <button class="help_updatelog" onclick="help_updatelogs()">更新日志 - 使用说明</button>
-        <form action="" class="line01">
-            <input type="text" name="keyword" placeholder="搜索线路 - 01 请输入名称" class="line01_input">
-            <input type="submit" value="搜索 状态：异常 不可使用" class="line01_button">
-        </form>
-        <form action="https://www.yemu.xyz/?url=" class="line02">
-            <input type="text" name="url" placeholder="解析线路 - 02 请输入网址" class="line02_input">
-            <input type="submit" value="解析 状态：正常" class="line02_button">
-        </form>
+        <h1 class="font">暂时暂停服务</h1>
+        <h1 class="font">2024/05/19-2024/05/20内 会更换新的引擎 将恢复服务 请等待 谢谢支持</h1>
+        
         <h5 class="copy">&copy;Copyright 2024 奶瓶 版权所有</h5>
     </div>
 </body>
