--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <h1 class="font">暂时暂停服务</h1>
-        <h1 class="font">2024/05/19-2024/05/20内 会更换新的引擎 将恢复服务 请等待 谢谢支持</h1>
+        <h1 class="font">更新引擎中... 请等待 谢谢支持</h1>
         
         <h5 class="copy">&copy;Copyright 2024 奶瓶 版权所有</h5>
     </div>
