--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 </head>
 <body>
     <div class="main">
-        <h2 class="font">TLos</h2>
-        <h3 class="font3">VIP视频解析</h3>
+        <h1 class="TL">TLos</h1>
+        <h1 class="title">VIP视频解析</h1>
         <div class="list">
-            <button class="help" onclick="helps()">使用说明</button>
-            <button class="updatelog" onclick="updatelogs()">更新日志</button>
+            <button class="helps_updatelogs" onclick="helps()">使用说明</button><br>
+            <button class="helps_updatelogs" onclick="updatelogs()">更新日志</button>
         </div>
-        <div class="line01">
-            <form action="https://www.yemu.xyz/?url=" class="api01">
-                <input type="text" name="url" placeholder="线路 - 01 请输入网址" class="api01_input">
-                <input type="submit" value="线路 状态：正常" class="api01_button">
-                <h3 class="font2">线路 01</h3>
-            </div>
-            <h4 class="copy">&copy;Copyright 2024 奶瓶 版权所有</h4>
+        <div class="list2">
+            <form action="https://www.yemu.xyz/?url=" class="api1">
+                <input type="text" name="url" class="input1" placeholder="线路 - 01 请输入网址">
+                <input value="线路 状态：正常" type="submit" class="open1">
+                <h1 class="line1">线路 01</h1>
+            </form>
+        </div>
+        <h1 class="TLcopy">&copy;Copyright 2024 TLos 版权所有</h1>
     </div>
 </body>
 </html>
