--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="main">
         <span class="TL">TLos VIP视频解析</span>
-        <span class="title">线路 01 状态：正常</span>
+        <span class="title">线路 01 状态：异常</span>
             <button class="helps" onclick="helps()">使用说明</button><br>
             <button class="updatelogs" onclick="updatelogs()">更新日志</button>
-            <form action="https://www.yemu.xyz/?url=" class="api1">
-                <input type="text" name="url" class="input1" placeholder="请输入网址">
+            <form action="" class="api1">
+                <input type="text" name="" class="input1" placeholder="请输入网址">
                 <input value="播放视频" type="submit" class="open1">
             </form>
         <h1 class="TLcopy">&copy;Copyright 2024 TLos 版权所有</h1>
